@@ -169,8 +169,8 @@ class ThreePhaseSeparatorTest {
      * XStream xstream = new XStream(); xstream.addPermission(AnyTypePermission.ANY); // Specify the
      * file path to read Path filePath = Paths.get(
      * "/workspaces/neqsim/src/test/java/neqsim/thermodynamicOperations/flashOps/my_process.xml" );
-     * String xmlContents = ""; try { //xmlContents = Files.readString(filePath); } catch
-     * (IOException e) { logger.error(e.getMessage());; }
+     * String xmlContents = ""; try { xmlContents = new String(Files.readAllBytes(filePath),
+     * StandardCharsets.UTF_8); } catch (IOException e) { logger.error(e.getMessage());; }
      *
      * // Deserialize from xml neqsim.processSimulation.processSystem.ProcessSystem operationsCopy =
      * (neqsim.processSimulation.processSystem.ProcessSystem) xstream.fromXML(xmlContents);
